@@ -6,6 +6,8 @@ class Net::SSLeay::ASN1_STRING : pointer {
   use Fn;
   
   # Class Methods
+  native static method new : Net::SSLeay::ASN1_STRING ();
+  
   private static method new_with_pointer : Net::SSLeay::ASN1_STRING ($pointer : Address, $options : object[] = undef) {
     
     my $self = new Net::SSLeay::ASN1_STRING;
@@ -19,6 +21,8 @@ class Net::SSLeay::ASN1_STRING : pointer {
   native method length : int ();
   
   native method get0_data : string ();
+  
+  native method set : void ($data : string, $len : int = -1);
   
   native method DESTROY : void ();
   
