@@ -38,6 +38,8 @@ ok(SPVM::TestCase::Net::SSLeay->ASN1_INTEGER);
 
 ok(SPVM::TestCase::Net::SSLeay->ASN1_OBJECT);
 
+ok(SPVM::TestCase::Net::SSLeay->ASN1_STRING);
+
 my $end_memory_blocks_count = $api->get_memory_blocks_count;
 is($end_memory_blocks_count, $start_memory_blocks_count);
 
